			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2649 2004/07/26 09:43:25 suz Exp $

<200407>
Mon Jul 26 17:21:06 JST 2004	keiichi@iij.ad.jp
	* freebsd[45]/sys/netinet/tcp_syncache.c tcp_var.h:
	Initialize IPv6 flowinfo field in syncache/syncookie mechanism.

2004-07-26  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/ping6/ping6.c: removed a one-second delay in the
	  ICMPv6 ECHO advertisement.
	* kame/sys/netinet6/nd6.c: fixed a freebsd5 kernel crash due to a
	  LOR in a TCPv6 session.

Wed Jul 21 13:14:08 JST 2004  itojun@iijlab.net
	* libinet6/name6.c: no need query ip6.int reverse tree any more.

2004-07-16  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/kame/pim6sd/mld6v2_proto.c: fixed a wrong S-flag handling.
	* kame/sys/netinet6/icmp6.c: uses TCP-hostcache framework for pMTU
	  discovery in freebsd5, so that pMTU discovery on TCP works fine.

2004-07-14  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/in6.c: fixed a freebsd5 kernel crash by "ndp -P"
	command.

2004-07-12  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/in6.c: fixed a freebsd5 kernel crash due to LOR.
	* freebsd5/sys/netinet6/in6_pcb.c: fixed a bug that some TCP/UDP
	packets do not go outside on freebsd5.

2004-07-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* *bsd/usr.sbin/Makefile: stopped building KAME bgpd.  It has
	reached the end of life.

2004-07-09  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/timer.c: fixed a bug that that MLDv1/v2 query 
	is not advertised when a router becomes a new querier

2004-07-09  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/{icmp6.c,mld6.c,mldv2.c}, kame/sys/netinet/icmp6.h:
	implemented a sysctl option to force MLD version in MLDv2-ready kernel.

2004-07-07  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/{in6.c, in6_src.c, nd6.c, nd6_rtr.c):
	freebsd5+kame starts up properly (other behavior is to be
	confirmed).
